[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.entry_points]
console_scripts = [
  "nester = src.cli_logic:cli"
]

[project]
name = "Nester"
dynamic = [
  "authors",
  "urls",
  "description",
  "keywords",
  "license",
  "classifiers",
  "version"
]

[tool.isort]
profile = "black"
