[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nester"
dynamic = [
  "authors",
  "urls",
  "description",
  "keywords",
  "license",
  "classifiers",
  "version"
]

[project.scripts]
nester = "nester.nester_commands:cli"

[tool.isort]
profile = "black"
