[metadata]
name = nester
author = Christopher Hock
author_email = christopher-hock@protonmail.com
url = https://github.com/ByteOtter/nester
description = Automated creation of project structure
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automation, project_structure, python
license = GPLv3.0
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  pip>=23.0.1
  setuptools>=65.5.0
  wheel>=0.37.1
