[metadata]
name = Nester
version = attr: nester.VERSION
author = Christopher Hock
author_email = christopher-hock@protonmail.com
url = https://github.com/ByteOtter/nester
description = Automated creation of project structure
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automation, project_structure, python
license = GPLv3.0
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
package_dir =
  =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  python_version>=3.10.10
  pip>=23.0.1
  setuptools>=65.5.0
  wheel>=0.37.1
  click>=8.1.3

[options.extras_require]
tests =
  pre-commit~=3.1.1
  isort~=2.6.0
  black~=23.1.0
  virtualenv~=20.21.0
  pytest~=7.2.2

docs =

[options.packages.find]
where = src
exclude =
  tests*
