[metadata]
name = Nester
version = attr: setuptools_scm.get_version(root="..", relative_to=__file__)
author = Christopher Hock
author_email = christopher-hock@protonmail.com
url = https://github.com/ByteOtter/nester
description = Automated creation of project structure
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automation, project_structure, python
license = GPLv3.0
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.10

[options]
package_dir =
  =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  setuptools>=65.5.0
  wheel>=0.37.1
  click>=8.1.3
  questionary>=1.10.0

[options.extras_require]
dev =
  pre-commit~=3.1.1
  isort~=2.6.0
  black~=23.1.0
  virtualenv~=20.21.0

tests =
  pytest~=7.2.2
  pytest_mock
  pytest-cov

docs =
  sphinx>=6.1.3
  sphinx-rtd-theme
  towncrier

[options.packages.find]
where = src
exclude =
  tests*
